# oneflowai-platform

./: README.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: be54a1113346_initial_auth_and_workspace.py
backend/app/: main.py
backend/app/api/: health.py  router.py
backend/app/auth/: dependencies.py  router.py
backend/app/core/: config.py  context.py  exceptions.py  lifespan.py  logging.py  middleware.py  security.py
backend/app/database/: base.py  mixins.py  qdrant.py  redis.py  session.py
backend/app/integrations/: __init__.py
backend/app/integrations/channels/: base.py  registry.py
backend/app/models/: __init__.py  user.py  workspace.py  workspace_member.py
backend/app/repositories/: base.py  user.py  workspace.py  workspace_member.py
backend/app/schemas/: auth.py  response.py  user.py  workspace.py
backend/app/services/: auth.py  workspace.py  workspace_naming.py
backend/app/utils/: slug.py
backend/app/workspace/: router.py
backend/tests/: conftest.py  test_auth.py  test_channels.py  test_health.py  test_request_id.py  test_slug.py  test_workspace.py  test_workspace_naming.py
