[project]
name = "oneflowai-platform"
version = "0.1.0"
description = "OneFlowAI Platform backend (Modular Monolith)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.1",
    "qdrant-client>=1.12.2",
    "bcrypt>=4.2.1",
    "pyjwt>=2.10.1",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = false

# ------------------------------------------------------------------ Ruff
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "B008",  # function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"app/core/config.py" = ["N802"]  # computed_field properties use UPPER_CASE
"alembic/*" = ["E402"]           # imports after alembic context setup

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------- Pytest
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
